--- a/LogModule/CMakeLists.txt
+++ b/LogModule/CMakeLists.txt
@@ -7,8 +7,8 @@ set (PROJECT CppLogModule)
 
 set(CMAKE_CXX_STANDARD 17)             # Стандарт C++
 set(CMAKE_CXX_STANDARD_REQUIRED ON) 
-set(CPPLOGMODULE_ROOT libs/CppLogModule)
-set (CMAKE_BINARY_DIR out)
+set(CPPLOGMODULE_ROOT /libs/CppLogModule)
+
 
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
