--- a/LogModule/LogModule/CMakeLists.txt
+++ b/LogModule/LogModule/CMakeLists.txt
@@ -1,35 +1,32 @@
 ﻿# CMakeList.txt: проект CMake для LogModule; включите исходный код и определения,
 # укажите здесь логику для конкретного проекта.
 #
-
 # Добавьте источник в исполняемый файл этого проекта.
 add_library(${PROJECT} STATIC
-#add_executable (LogModule
-	"src/LogModule.cpp" "include/LogModule.h"
-	 "LogAPI.cpp" "LogAPI.h"
-)
+    #add_executable (LogModule
+    "src/LogModule.cpp" "include/LogModule.h"
+    "LogAPI.cpp" "LogAPI.h"
+    "LogAPI_global.h"
+    )
 
 target_include_directories(${PROJECT}
-                           INTERFACE
-                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-                            $<INSTALL_INTERFACE:include>
-                           )
+    INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
+    )
 
 set(installable_libs ${PROJECT})
 
 if(TARGET LogModule)
-  list(APPEND installable_libs LogModule)
+    list(APPEND installable_libs LogModule)
 endif()
 
 install(TARGETS ${installable_libs}
-        EXPORT ${PROJECT}Targets
-        DESTINATION lib)
+    EXPORT ${PROJECT}Targets
+    DESTINATION lib)
 
 install(FILES 
     LogAPI.h
-DESTINATION include)
+    DESTINATION include)
 
-install(FILES 
-    include/LogModule.h
-DESTINATION include/include)
 
