--- a/LogModule/LogModule/CMakeLists.txt
+++ b/LogModule/LogModule/CMakeLists.txt
@@ -2,7 +2,7 @@
 # укажите здесь логику для конкретного проекта.
 #
 # Добавьте источник в исполняемый файл этого проекта.
-add_library(${PROJECT} STATIC
+add_library(${PROJECT} SHARED
     #add_executable (LogModule
     "src/LogModule.cpp" "include/LogModule.h"
     "LogAPI.cpp" "LogAPI.h"
